--- a/resources/views/beranda/payment/style.css
+++ b/resources/views/beranda/payment/style.css
@@ -1,34 +1,196 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap");
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 section {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Poppins", sans-serif;
 }
 
 .payment {
-    width: 60%;
-    display: flex;
+  width: 60%;
+  height: 80%;
+  display: flex;
+  box-shadow: 0px 0px 23px 3px rgba(0,0,0,0.76);
+-webkit-box-shadow: 0px 0px 23px 3px rgba(0,0,0,0.76);
+-moz-box-shadow: 0px 0px 23px 3px rgba(0,0,0,0.76);
+  border-radius: 8px;
+  padding: 10px;
 }
 
 .left {
-    width: 50%;
+  padding-left: 20px;
+  width: 50%;
+  display: flex;
+  align-items: center;
 }
 
 .left img {
-    width: 100%;
+  width: 90%;
+  border-radius: 5px;
+}
+.right {
+  gap: 20px;
+  width: 50%;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.right h1 {
+  font-size: 30px
+}
+.right h3 {
+  color: red;
+  margin-top: -10px;
+}
+.jumlah {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+#jumlah {
+  font-weight: bold;
+}
+.right #btn-asc,
+#btn-dsc {
+  cursor: pointer;
+  padding: 10px;
+  border: none;
+  color: white;
+  border-radius: 5px;
+  background-color: #425475;
+}
+.right #btn-kirim {
+  border-radius: 8px;
+  border: none;
+  padding: 6px;
+  color: white;
+  background-color: #425475;
+}
+.button2 {
+  display: inline-block;
+  transition: all 0.2s ease-in;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+  color: #090909;
+  padding: 0.7em 1.7em;
+  font-size: 18px;
+  border-radius: 0.5em;
+  background: #e8e8e8;
+  border: 1px solid #e8e8e8;
+  box-shadow: 6px 6px 12px #c5c5c5, -6px -6px 12px #ffffff;
 }
 
-.right {
-    width: 50%;
-    padding-left: 40px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+.button2:active {
+  color: #666;
+  box-shadow: inset 4px 4px 12px #c5c5c5, inset -4px -4px 12px #ffffff;
+}
+
+.button2:before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%) scaleY(1) scaleX(1.25);
+  top: 100%;
+  width: 140%;
+  height: 180%;
+  background-color: rgba(0, 0, 0, 0.05);
+  border-radius: 50%;
+  display: block;
+  transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+  z-index: -1;
+}
+
+.button2:after {
+  content: "";
+  position: absolute;
+  left: 55%;
+  transform: translateX(-50%) scaleY(1) scaleX(1.45);
+  top: 180%;
+  width: 160%;
+  height: 190%;
+  background-color: #6558d3;
+  border-radius: 50%;
+  display: block;
+  transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+  z-index: -1;
+}
+
+.button2:hover {
+  color: #ffffff;
+  border: 1px solid #6558d3;
+}
+
+.button2:hover:before {
+  top: -35%;
+  background-color: #6558d3;
+  transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+}
+
+.button2:hover:after {
+  top: -45%;
+  background-color: #6558d3;
+  transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+}
+button {
+  font-family: inherit;
+  font-size: 13px;
+  background: #425475;
+  color: white;
+  padding: 0.7em 1em;
+  padding-left: 0.9em;
+  display: flex;
+  align-items: center;
+  border: none;
+  border-radius: 8px;
+  overflow: hidden;
+  transition: all 0.2s;
+  cursor: pointer;
+}
+
+button span {
+  display: block;
+  margin-left: 0.3em;
+  transition: all 0.3s ease-in-out;
+}
+
+button svg {
+  display: block;
+  transform-origin: center center;
+  transition: transform 0.3s ease-in-out;
+}
+
+button:hover .svg-wrapper {
+  animation: fly-1 0.6s ease-in-out infinite alternate;
+}
+
+button:hover svg {
+  transform: translateX(1.2em) rotate(-135deg) scale(1.1);
+}
+
+button:hover span {
+  transform: translateX(5em);
+}
+
+button:active {
+  transform: scale(0.95);
+}
+
+@keyframes fly-1 {
+  from {
+    transform: translateY(0.1em);
+  }
+
+  to {
+    transform: translateY(-0.1em);
+  }
 }
