--- a/resources/views/beranda/style.css
+++ b/resources/views/beranda/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap");
 * {
     padding: 0;
     margin: 0;
@@ -11,23 +12,67 @@ section {
     justify-content: center;
     align-items: center;
     gap: 20px;
+    font-family: "Poppins", sans-serif;
 }
 
-.card {
-    width: 20%;
+.plan {
+    border-radius: 16px;
+    box-shadow: 0 30px 30px -25px rgba(0, 38, 255, 0.205);
     padding: 10px;
-    border: 2px black solid;
-    border-radius: 8px;
+    background-color: #fff;
+    color: #697e91;
+    max-width: 300px;
 }
-
-.card img {
+  
+.plan .inner {
+    align-items: center;
+    padding: 20px;
+    padding-top: 40px;
+    background-color: #ecf0ff;
+    border-radius: 12px;
+    position: relative;
+}
+  
+.plan .pricing {
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: #bed6fb;
+    border-radius: 99em 0 0 99em;
+    display: flex;
+    align-items: center;
+    padding: 0.625em 0.75em;
+    font-size: 1.25rem;
+    font-weight: 600;
+    color: #425475;
+}
+  
+.plan img {
     width: 100%;
 }
-
-.card button {
-    padding: 8px;
-    background-color: transparent;
-    border: 1.5px black solid;
-    border-radius: 8px;
-    cursor: pointer;
+  
+.plan .action {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: end;
+}
+  
+.plan .button {
+    background-color: #6558d3;
+    border-radius: 6px;
+    color: #fff;
+    font-weight: 500;
+    font-size: 1.125rem;
+    text-align: center;
+    border: 0;
+    outline: 0;
+    width: 100%;
+    margin-top: 10px;
+    padding: 0.625em 0.75em;
+    text-decoration: none;
+}
+  
+.plan .button:hover, .plan .button:focus {
+    background-color: #4133B7;
 }
