--- a/resources/views/beranda/payment/style.css
+++ b/resources/views/beranda/payment/style.css
@@ -4,7 +4,35 @@
   margin: 0;
   box-sizing: border-box;
 }
-
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #6558d3;
+  padding: 8px;
+  border-radius: 0.5rem;
+  box-shadow: 0px 7px 31px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 7px 18px 0px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 0px 7px 18px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 7px 18px 0px rgba(0, 0, 0, 0.75);
+}
+nav .rit-1 ul {
+  display: flex;
+  gap: 10px;
+  list-style-type: none;
+  color: white;
+  font-family: "Poppins", sans-serif;
+}
+nav .rit-1 ul li a {
+  text-decoration: none;
+  color: white;
+  font-family: "Poppins", sans-serif;
+}
+nav .lif-1 img {
+  width: 80px;
+  height: 50px;
+  padding-left: 20px;
+}
 section {
   width: 100%;
   height: 100vh;
@@ -18,9 +46,9 @@ section {
   width: 60%;
   height: 80%;
   display: flex;
-  box-shadow: 0px 0px 23px 3px rgba(0,0,0,0.76);
--webkit-box-shadow: 0px 0px 23px 3px rgba(0,0,0,0.76);
--moz-box-shadow: 0px 0px 23px 3px rgba(0,0,0,0.76);
+  box-shadow: 0px 0px 23px 3px rgba(0, 0, 0, 0.76);
+  -webkit-box-shadow: 0px 0px 23px 3px rgba(0, 0, 0, 0.76);
+  -moz-box-shadow: 0px 0px 23px 3px rgba(0, 0, 0, 0.76);
   border-radius: 8px;
   padding: 10px;
 }
@@ -45,7 +73,7 @@ section {
   justify-content: center;
 }
 .right h1 {
-  font-size: 30px
+  font-size: 30px;
 }
 .right h3 {
   color: red;
