--- a/resources/views/beranda/style.css
+++ b/resources/views/beranda/style.css
@@ -1,78 +1,107 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap");
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
-
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #6558d3;
+  padding: 8px;
+  border-radius: 0.5rem;
+  box-shadow: 0px 7px 31px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 7px 18px 0px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 0px 7px 18px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 7px 18px 0px rgba(0, 0, 0, 0.75);
+}
+nav .rit-1 ul {
+  display: flex;
+  gap: 10px;
+  list-style-type: none;
+  color: white;
+  font-family: "Poppins", sans-serif;
+}
+nav .rit-1 ul li a {
+  text-decoration: none;
+  color: white;
+  font-family: "Poppins", sans-serif;
+}
+nav .lif-1 img {
+  width: 80px;
+  height: 50px;
+  padding-left: 20px;
+}
 section {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-    font-family: "Poppins", sans-serif;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  font-family: "Poppins", sans-serif;
 }
 
 .plan {
-    border-radius: 16px;
-    box-shadow: 0 30px 30px -25px rgba(0, 38, 255, 0.205);
-    padding: 10px;
-    background-color: #fff;
-    color: #697e91;
-    max-width: 300px;
+  border-radius: 16px;
+  box-shadow: 0 30px 30px -25px rgba(0, 38, 255, 0.205);
+  padding: 10px;
+  background-color: #fff;
+  color: #697e91;
+  max-width: 300px;
 }
-  
+
 .plan .inner {
-    align-items: center;
-    padding: 20px;
-    padding-top: 40px;
-    background-color: #ecf0ff;
-    border-radius: 12px;
-    position: relative;
+  align-items: center;
+  padding: 20px;
+  padding-top: 40px;
+  background-color: #ecf0ff;
+  border-radius: 12px;
+  position: relative;
 }
-  
+
 .plan .pricing {
-    position: absolute;
-    top: 0;
-    right: 0;
-    background-color: #bed6fb;
-    border-radius: 99em 0 0 99em;
-    display: flex;
-    align-items: center;
-    padding: 0.625em 0.75em;
-    font-size: 1.25rem;
-    font-weight: 600;
-    color: #425475;
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: #bed6fb;
+  border-radius: 99em 0 0 99em;
+  display: flex;
+  align-items: center;
+  padding: 0.625em 0.75em;
+  font-size: 1.25rem;
+  font-weight: 600;
+  color: #425475;
 }
-  
+
 .plan img {
-    width: 100%;
+  width: 100%;
 }
-  
+
 .plan .action {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: end;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: end;
 }
-  
+
 .plan .button {
-    background-color: #6558d3;
-    border-radius: 6px;
-    color: #fff;
-    font-weight: 500;
-    font-size: 1.125rem;
-    text-align: center;
-    border: 0;
-    outline: 0;
-    width: 100%;
-    margin-top: 10px;
-    padding: 0.625em 0.75em;
-    text-decoration: none;
+  background-color: #6558d3;
+  border-radius: 6px;
+  color: #fff;
+  font-weight: 500;
+  font-size: 1.125rem;
+  text-align: center;
+  border: 0;
+  outline: 0;
+  width: 100%;
+  margin-top: 10px;
+  padding: 0.625em 0.75em;
+  text-decoration: none;
 }
-  
-.plan .button:hover, .plan .button:focus {
-    background-color: #4133B7;
+
+.plan .button:hover,
+.plan .button:focus {
+  background-color: #4133b7;
 }
